DarkIce next version

	o added AAC support through the faac codec, http://www.audiocoding.com

14-04-2005 DarkIce 0.15 released

    o ported to OpenBSD and NetBSD, though real-time scheduling not supported,
      since it is not implemented in OpenBSD / NetBSD
    o added possibility to downsample from stereo to mono when encoding
      to Ogg Vorbis, thanks to Deti Fliegl, <deti@fliegl.de>
    o added support for Jack inputs, enabling a lot of interesting usage,
      including support for MacOS X.
      Thanks to Nicholas J. Humfrey <njh@ecs.soton.ac.uk>
    o various improvements by Joel Ebel <jbebel@ncsu.edu>
    o added option to turn off automatic reconnect feature
    o added IPv6 support, thanks to <jochen2@users.sourceforge.net>

15-02-2004: DarkIce 0.14 released

    o added ALSA support, thanks to Christian Forster
      <forster@like.e-technik.uni-erlangen.de>
    o added fix to enable downsampling from stereo to mono of mp3 streams
      when streaming to an icecast2 server. thanks to John Deeny
      <taqueso@dilapidated.org>
    o removed _X and _Y symbols from aflibConverter files, which caused
      a naming collision on Solaris. thanks to Robert Lunnon,
      <bobl@optushome.com.au>
    o bug fix: ogg vorbis recording to only a file caused a segfault.
      now fixed, thanks to Enrico Ardizzoni <craken@users.sourceforge.net>

07-01-2004: DarkIce 0.13.2 released

    o bug fix: two bugs fixed that caused core dump when encoding into
      mp3 of FreeBSD. thanks to John Hay <jhay@icomtek.csir.co.za>
    o added configure option --with-debug to enable compilation for debug mode

12-02-2003: Darkice 0.13.1 released

    o added cross-platform pthread detection, thanks to
      Steven G. Johnson <stevenj@alum.mit.edu> and
      Alejandro Forero Cuervo <bachue@bachue.com>
      see http://www.gnu.org/software/ac-archive/htmldoc/acx_pthread.html
    o added proper detection of netural endiannes for 16 bit recording